"24/02/2026 11:26 update application properties"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.servlet.multipart.max-file-size = 16MB
 spring.servlet.multipart.max-request-size = 16MB
 
 ## MongoDB setup connection
-spring.data.mongodb.uri=mongodb+srv://davidbg1415:1415@smartcartdb.qv3wnqs.mongodb.net/?appName=SmartCartDB
+spring.data.mongodb.uri=mongodb+srv://davidbg1415:1415@smartcartdb.qv3wnqs.mongodb.net/smartcartdb
+
 
 #############################################################################
